--- a/bower.json
+++ b/bower.json
@@ -40,7 +40,10 @@
     "AngularJS-Toaster": "angularjs-toaster#^1.2.0",
     "paper-tabs": "PolymerElements/paper-tabs#^1.4.1",
     "iron-pages": "PolymerElements/iron-pages#^1.0.7",
-    "alv-ch-ng.text-truncate": "^0.2.0"
+    "alv-ch-ng.text-truncate": "^0.2.0",
+    "paper-checkbox": "PolymerElements/paper-checkbox#^1.1.3",
+    "paper-radio-button": "PolymerElements/paper-radio-button#^1.1.2",
+    "paper-radio-group": "PolymerElements/paper-radio-group#^1.0.9"
   },
   "devDependencies": {
     "angular-mocks": "1.4.8",
