--- a/bower.json
+++ b/bower.json
@@ -43,7 +43,9 @@
     "alv-ch-ng.text-truncate": "^0.2.0",
     "paper-checkbox": "PolymerElements/paper-checkbox#^1.1.3",
     "paper-radio-button": "PolymerElements/paper-radio-button#^1.1.2",
-    "paper-radio-group": "PolymerElements/paper-radio-group#^1.0.9"
+    "paper-radio-group": "PolymerElements/paper-radio-group#^1.0.9",
+    "paper-input": "PolymerElements/paper-input#^1.1.11",
+    "iron-input": "PolymerElements/iron-input#^1.0.10"
   },
   "devDependencies": {
     "angular-mocks": "1.4.8",
