--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "src/main/webapp/bower_components"
   ],
   "dependencies": {
-    "bower": "^1.6.3"
+    "bower": "^1.7.9",
+    "grunt-cli": "^1.2.0"
   },
   "devDependencies": {
     "browser-sync": "2.10.0",
@@ -29,9 +30,9 @@
     "gulp-jshint": "1.12.0",
     "gulp-browserify": "0.5.1",
     "gulp-notify": "2.2.0",
-    "gulp-plumber" : "1.0.1",
-    "gulp-changed" : "1.3.0",
-    "gulp-cached" : "1.1.0",
+    "gulp-plumber": "1.0.1",
+    "gulp-changed": "1.3.0",
+    "gulp-cached": "1.1.0",
     "yargs": "3.32.0",
     "map-stream": "0.0.6",
     "events": "1.1.0",
