--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "testPath": "src/test/javascript/spec",
   "dependencies": {
     "angular": "1.4.8",
-    "angular-aria": "1.4.8",
+    "angular-aria": "^1.5.5",
     "angular-bootstrap": "0.14.3",
     "angular-cache-buster": "0.4.3",
     "angular-cookies": "1.4.8",
@@ -46,7 +46,8 @@
     "paper-radio-group": "PolymerElements/paper-radio-group#^1.0.9",
     "paper-input": "PolymerElements/paper-input#^1.1.11",
     "iron-input": "PolymerElements/iron-input#^1.0.10",
-    "ngGallery": "*"
+    "ngGallery": "*",
+    "angular-material": "^1.0.8"
   },
   "devDependencies": {
     "angular-mocks": "1.4.8",
