--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -45,7 +45,7 @@ spring:
         host: smtp.gmail.com
         port: 587
         username: nil.panes@gmail.com  #Replace this field with your Gmail username.
-        password: npc19941           #Replace this field with your Gmail password.
+        password:            #Replace this field with your Gmail password.
         protocol: smtp
         tls: true
         properties.mail.smtp:
